[package]
name = "sqlxinsert"
version = "0.6.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
license = "MIT"
description = "Sqlx derive macro for simpler inserts"
repository = "https://github.com/fbucek/sqlxinsert"
readme = "README.md"
exclude = [".github/*"]

[lib]
proc-macro = true

[dependencies]
eyre = "0.6"
quote = "1.0"
syn = "1.0"
async-trait = "0.1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "postgres"] }
heck = "0.4.0"
proc-macro2 = "1.0.47"
darling = "0.14.2"


[dev-dependencies]
tokio = { version = "1.19", features= ["rt-multi-thread",  "macros"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres"] }
async-trait = "0.1.59"
